erros corrigidos